[gd_scene load_steps=9 format=2]

[ext_resource path="res://weapon png.png" type="Texture" id=1]
[ext_resource path="res://muzzle flash.png" type="Texture" id=2]
[ext_resource path="res://Weapon.gd" type="Script" id=3]
[ext_resource path="res://soundEffects/Gunshot sound.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=2]
length = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WeaponFlash:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.0804688, 0.0604167 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "muzzle_flash"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponFlash:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.1, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WeaponFlash:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "ReloadAnimation"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -45.0, -45.0, 0.0 ]
}

[node name="Weapon" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.00003, 1.00003 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="Cooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="WeaponFlash" type="Sprite" parent="."]
position = Vector2( 52.25, -8.5 )
scale = Vector2( 0.0804688, 0.0604167 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/muzzle_flash = SubResource( 1 )

[node name="Reload" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/ReloadAnimation = SubResource( 4 )

[node name="reloadTimer" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[node name="Gunshot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0

[connection signal="timeout" from="reloadTimer" to="." method="_on_reloadTimer_timeout"]
